# payments

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tx_rlp_bytes.txt
circuits/: README.md
cli/: .gitignore  README.md  WASM_INTEGRATION.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: proof.ts
cli/test/: setup.ts  wasm.test.ts
core/: Cargo.toml  README.md
core/node/: esbuild.js  index.js  package-lock.json  package.json  vitest.config.js
core/node/test/: index.test.js
core/proof_nodes/: index.js  package-lock.json
core/src/: lib.rs  proof.rs  rpc.rs  tests.rs  transaction.rs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: index.ts
test/: index.js  package-lock.json  package.json
test/circuits/: payment_verify.json
verify_sent_tx/: Prover.toml
verify_sent_tx/src/: constants.nr  main.nr  rlp.nr
verify_sent_tx_prep/: .env  Cargo.toml  README.md  output.txt
verify_sent_tx_prep/proof_nodes/: debug.js  index.js  package.json  proof_result.json
verify_sent_tx_prep/src/: lib.rs  main.rs  proof.rs  rpc.rs  tests.rs  transaction.rs  utils.rs
verify_sent_tx_prep/src/proof/: trie_visualizer.rs
