[package]
name = "keygate"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.16", features = ["provider-http", "rpc-types", "rlp"], default-features = false }
hex = "0.4"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
dotenvy = "0.15"
getrandom = { version = "0.2.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]