[package]
name = "keygate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.16", features = ["provider-http", "rpc-types", "rlp"], default-features = false }
hex = "0.4"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
dotenvy = "0.15"
getrandom = { version = "0.2.2", features = ["js"] }
wasm-bindgen-test = "0.3.50"

[lib]
crate-type = ["cdylib", "rlib"]