[package]
name = "keygate"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.1", features = ["essentials"] }
alloy-rlp = "0.3.12"
alloy-trie = "0.8.1"
hex = "0.4"
tokio = { version = "1.45.1", features = ["full"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
dotenvy = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]